<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/margin_eight"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/askNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin_eight"
        android:textColor="@color/black"
        android:textSize="@dimen/textThirtyFive"
        tools:text="@string/guessNumber" />

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:textColor="#4CAF50"
        android:textSize="@dimen/textThirtyFive"
        android:visibility="invisible"
        tools:text="@string/resultNumber" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reset_button"
        android:layout_marginBottom="@dimen/margin_thirty_two"
        android:layout_marginLeft="@dimen/margin_eight"
        android:layout_marginRight="@dimen/margin_eight">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/ic_blue_color_circle"
            android:contentDescription="@string/lower_arrow"
            android:onClick="arrowDown"
            app:srcCompat="@drawable/ic_arrow_downward" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_purple_color_circle"
            android:contentDescription="@string/check"
            app:srcCompat="@drawable/ic_check"
            android:onClick="checkFunction"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_blue_color_circle"
            android:contentDescription="@string/upper_arrow"
            android:onClick="arrowUpward"
            app:srcCompat="@drawable/ic_arrow_upward" />

    </RelativeLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_eight"
        android:layout_marginTop="@dimen/margin_eight"
        android:layout_marginEnd="@dimen/margin_eight"
        android:layout_marginBottom="@dimen/margin_eight"
        android:backgroundTint="@color/purple_200"
        android:text="@string/Reset"
        android:textColor="#311B92"
        android:onClick="resetFunction"
        />
</RelativeLayout>